Bug 468343 - Korganizer crashed on startup
Summary: Korganizer crashed on startup
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: libakonadi (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-04-10 01:42 UTC by Jiri Palecek
Modified: 2023-04-25 08:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (2.82 KB, text/plain)
2023-04-25 08:12 UTC, Tharsicius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jiri Palecek 2023-04-10 01:42:54 UTC
Application: korganizer (5.22.2 (22.12.2))

Qt Version: 5.15.8
Frameworks Version: 5.103.0
Operating System: Linux 6.1.0-6-amd64 x86_64
Windowing System: X11
Distribution: Debian GNU/Linux bullseye/sid
DrKonqi: 5.26.90 [KCrashBackend]

-- Information about the crash:
As soon as the desktop started, KOrganizer which was automatically launched by the session crashed.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault

[KCrash Handler]
#4  KJob::setError (this=this@entry=0x0, errorCode=errorCode@entry=100) at ./src/lib/jobs/kjob.cpp:254
#5  0x00007fe8bd516da4 in Akonadi::SessionPrivate::serverStateChanged (this=<optimized out>, state=<optimized out>) at ./src/core/session.cpp:297
#6  0x00007fe8bbce8f4f in QtPrivate::QSlotObjectBase::call (a=0x7ffedd00b930, r=0x5564780769a0, this=0x5564780741e0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#7  doActivate<false> (sender=0x556477de44b0, signal_index=5, argv=0x7ffedd00b930) at kernel/qobject.cpp:3923
#8  0x00007fe8bbce21ef in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fe8bd625dc0 <Akonadi::ServerManager::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffedd00b930) at kernel/qobject.cpp:3983
#9  0x00007fe8bd511ce1 in Akonadi::ServerManager::stateChanged (this=<optimized out>, _t1=<optimized out>, _t1@entry=Akonadi::ServerManager::Broken) at ./obj-x86_64-linux-gnu/src/core/KF5AkonadiCore_autogen/include/moc_servermanager.cpp:180
#10 0x00007fe8bd51507c in Akonadi::ServerManagerPrivate::setState (state=Akonadi::ServerManager::Broken, this=0x7fe8bd62e400 <(anonymous namespace)::Q_QGS_sInstance::innerFunction()::holder>) at ./src/core/servermanager.cpp:73
#11 Akonadi::ServerManagerPrivate::timeout (this=0x7fe8bd62e400 <(anonymous namespace)::Q_QGS_sInstance::innerFunction()::holder>) at ./src/core/servermanager.cpp:93
#12 Akonadi::ServerManagerPrivate::ServerManagerPrivate()::{lambda()#1}::operator()() const (__closure=<optimized out>) at ./src/core/servermanager.cpp:52
#13 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Akonadi::ServerManagerPrivate::ServerManagerPrivate()::{lambda()#1}>::call(Akonadi::ServerManagerPrivate::ServerManagerPrivate()::{lambda()#1}&, void**) (arg=<optimized out>, f=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:146
#14 QtPrivate::Functor<Akonadi::ServerManagerPrivate::ServerManagerPrivate()::{lambda()#1}, 0>::call<QtPrivate::List<>, void>(Akonadi::ServerManagerPrivate::ServerManagerPrivate()::{lambda()#1}&, void*, void**) (arg=<optimized out>, f=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:256
#15 QtPrivate::QFunctorSlotObject<Akonadi::ServerManagerPrivate::ServerManagerPrivate()::{lambda()#1}, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:443
#16 0x00007fe8bbce8f4f in QtPrivate::QSlotObjectBase::call (a=0x7ffedd00ba40, r=0x556477de44b0, this=0x556477df9220) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#17 doActivate<false> (sender=0x7fe8900095c0, signal_index=3, argv=0x7ffedd00ba40) at kernel/qobject.cpp:3923
#18 0x00007fe8bbce21ef in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fe8bbf4c2e0 <QTimer::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffedd00ba40) at kernel/qobject.cpp:3983
#19 0x00007fe8bbcecd6a in QTimer::timeout (this=<optimized out>, _t1=...) at .moc/moc_qtimer.cpp:205
#20 0x00007fe8bbcdd50d in QObject::event (this=0x7fe8900095c0, e=0x7ffedd00bb90) at kernel/qobject.cpp:1369
#21 0x00007fe8bc962fae in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x7fe8900095c0, e=0x7ffedd00bb90) at kernel/qapplication.cpp:3640
#22 0x00007fe8bbcb16f8 in QCoreApplication::notifyInternal2 (receiver=0x7fe8900095c0, event=0x7ffedd00bb90) at kernel/qcoreapplication.cpp:1064
#23 0x00007fe8bbcb18be in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1462
#24 0x00007fe8bbd08c31 in QTimerInfoList::activateTimers (this=0x556477d95390) at kernel/qtimerinfo_unix.cpp:643
#25 0x00007fe8bbd094c4 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#26 0x00007fe8b96627a9 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007fe8b9662a38 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007fe8b9662acc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007fe8bbd09836 in QEventDispatcherGlib::processEvents (this=0x556477d97880, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#30 0x00007fe8bbcb017b in QEventLoop::exec (this=this@entry=0x7ffedd00bdd0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#31 0x00007fe8bbcb82d6 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#32 0x00005564770666da in ?? ()
#33 0x00007fe8bb84618a in __libc_start_call_main (main=main@entry=0x556477066200, argc=argc@entry=3, argv=argv@entry=0x7ffedd00c068) at ../sysdeps/nptl/libc_start_call_main.h:58
#34 0x00007fe8bb846245 in __libc_start_main_impl (main=0x556477066200, argc=3, argv=0x7ffedd00c068, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffedd00c058) at ../csu/libc-start.c:381
#35 0x0000556477066971 in ?? ()
[Inferior 1 (process 2718) detached]

The reporter indicates this bug may be a duplicate of or related to bug 458315, bug 458497, bug 460586, bug 461131, bug 462169, bug 464275, bug 465245.

Reported using DrKonqi
Comment 1 Carl Schwan 2023-04-22 05:00:45 UTC
Git commit eca4fdbdf328883ae564b568c9ba13697cc90c4a by Carl Schwan, on behalf of Jiří Paleček.
Committed on 22/04/2023 at 04:54.
Pushed by carlschwan into branch 'master'.

Fix wrong for clause in Akonadi::Session
Related: bug 465245, bug 464275, bug 462213, bug 462169, bug 461131, bug 460653, bug 460586, bug 458497, bug 458315

M  +6    -3    src/core/session.cpp

https://invent.kde.org/pim/akonadi/commit/eca4fdbdf328883ae564b568c9ba13697cc90c4a
Comment 2 Carl Schwan 2023-04-22 05:05:39 UTC
Git commit 0ab418bacdaf8322771e41452a87d062a2449869 by Carl Schwan, on behalf of Jiří Paleček.
Committed on 22/04/2023 at 05:05.
Pushed by carlschwan into branch 'release/23.04'.

Fix wrong for clause in Akonadi::Session
Related: bug 465245, bug 464275, bug 462213, bug 462169, bug 461131, bug 460653, bug 460586, bug 458497, bug 458315
(cherry picked from commit eca4fdbdf328883ae564b568c9ba13697cc90c4a)

M  +6    -3    src/core/session.cpp

https://invent.kde.org/pim/akonadi/commit/0ab418bacdaf8322771e41452a87d062a2449869
Comment 3 Tharsicius 2023-04-25 08:12:31 UTC
Created attachment 158411 [details]
New crash information added by DrKonqi

korganizer (5.22.3 (22.12.3)) using Qt 5.15.8

KOrganizer always crashes at startup.

[New LWP 943]
[New LWP 945]
[New LWP 946]
[New LWP 947]
[New LWP 951]
[New LWP 953]
[New LWP 954]
[New LWP 955]
[New LWP 956]
[New LWP 957]
[New LWP 983]
[New LWP 988]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
0x00007fefb8f9c0a9 in poll () from /lib64/libc.so.6

-- Backtrace (Reduced):
#4  0x00007fefbab4c200 in KJob::setError(int) () from /usr/lib64/libKF5CoreAddons.so.5
#5  0x00007fefbafe6544 in Akonadi::SessionPrivate::serverStateChanged(Akonadi::ServerManager::State) () from /usr/lib64/libKF5AkonadiCore.so.5
[...]
#7  0x00007fefbafdfe51 in Akonadi::ServerManager::stateChanged(Akonadi::ServerManager::State) () from /usr/lib64/libKF5AkonadiCore.so.5
[...]
#10 0x00007fefb99e1587 in QTimer::timeout(QTimer::QPrivateSignal) () from /usr/lib64/libQt5Core.so.5
#11 0x00007fefb99e18e8 in QTimer::timerEvent(QTimerEvent*) () from /usr/lib64/libQt5Core.so.5