Fix wrong for clause in Akonadi::Session

BUG: 468343
BUG: 465245
BUG: 464275
BUG: 462213
BUG: 462169
BUG: 461131
BUG: 460653
BUG: 460586
BUG: 458497
BUG: 458315